      config file option should hold those instead (user *.rpath.org user pass)
    * If a user name is given without a password the password will be prompted
      for if the repository returns a permissions error
  o Building packages:
    * Dependencies are now generated for Java .class and .jar files.
      They are not yet enforced, to give time to rebuild Java packages.
  o Code structure:
    * queryrep, query, showchangeset, and update --info all use the same 
      code to determine how to display their data.  Display.py was changed
      to perform general display operations.
    * query.py added
    * added JobSource concept for searching and manipulating lists of jobs.
    * moved datastore.py into repository module
    * Stubs have been added for adding python and perl dependencies, and
      the stubs have been set to be initially ignored.

Changes in 0.71.2
  o Client Changes:
    * The update-conary option has been renamed updateconary per
      bugzilla #428
    * buildPath can be set in contexts
    * cvc co <foo> will work even if there are two foos on the same label with
      different branches.  In that case, it will warn about the older foo 
      which it doesn't check out
    * Test mode didn't work for updates and erases which were split into
      multiple jobs
  o Build Changes:
    * Combined the EtcConfig and Config policies, and deprecated
      the EtcConfig policy.
    * All config files default to being put into a :config component.
      This is overridden by any ComponentSpec specifications in the recipe.
    * A use flag has been added for xen defaulting to 'sense prefernot'.  This
      flag should be used to specify flavors for xen domU builds where special
      provisions are made for paravirtualized domU.
    * Added new CheckDesktopFiles policy to catch some more common errors
      in .desktop files.  (For now, it looks for common cases of missing
      icons; more may be added over time.)