@@ -23,6 +23,8 @@ Changes in 0.80.0:
   o Building packages:
     * Dependencies are now generated for Java .class and .jar files.
       They are not yet enforced, to give time to rebuild Java packages.
+    * CheckDesktopFiles now looks in /usr/share/icons for icons, and
+      can find icon names without extensions specified.
   o Code structure:
     * queryrep, query, showchangeset, and update --info all use the same 
       code to determine how to display their data.  Display.py was changed
